@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ConsultarReivindicarTarefaUI <<presentation>>
class ConsultarReivindicarTarefaController <<application>>
class PedidoRepository <<repository>>
class ColaboradorRepository <<repository>>
class Pedido <<domain>>

ConsultarReivindicarTarefaUI --> ConsultarReivindicarTarefaController
ConsultarReivindicarTarefaUI : doShow()

ConsultarReivindicarTarefaController : getUser()
ConsultarReivindicarTarefaController : tarefasPendentes(colab)
ConsultarReivindicarTarefaController : filtrarTarefasPendentes(colab)
ConsultarReivindicarTarefaController : ordenarTarefasPendentes(colab)
ConsultarReivindicarTarefaController : getTarefaById(idAtividade)
ConsultarReivindicarTarefaController : getPedidoByTarefa(idAtividade)
ConsultarReivindicarTarefaController : adicionaColaborador(pedido, colab, manual)

Pedido : adicionaColaborador(colab, manual)

ConsultarReivindicarTarefaController --> PedidoRepository
ConsultarReivindicarTarefaController --> ColaboradorRepository
ConsultarReivindicarTarefaController --> Pedido

ColaboradorRepository : getUser()

PedidoRepository : getListaTarefasPendentes(colab)
PedidoRepository : filtrarTarefasPendentes(colab)
PedidoRepository : ordenarTarefasPendentes(colab)
PedidoRepository : getTarefaById(idAtividade)
PedidoRepository : getPedidoByTarefa(idAtividade)

@enduml